# FieldIntelligenceCollector

./: .gitignore  README.md
collector/: CMakeLists.txt  main.cpp  main.hpp
collector/include/: AdapterManager.hpp  Database.hpp  GPSManager.hpp  OUIManager.hpp  PacketScanner.hpp
collector/src/: AdapterManager.cpp  Database.cpp  GPSManager.cpp  OUIManager.cpp  PacketScanner.cpp
frontend/: README.md  angular.json  package-lock.json  package.json
frontend/src/: index.html  styles.scss
frontend/src/app/: app.html  app.routes.ts  app.scss  app.spec.ts  app.ts
frontend/src/app/analytics/: analytics.html  analytics.scss  analytics.ts
frontend/src/app/home/: home.html  home.scss  home.ts
frontend/src/app/livedata/: livedata.html  livedata.scss  livedata.spec.ts  livedata.ts
frontend/src/app/settings/: settings.html  settings.scss  settings.ts
frontend/src/app/sidebar/: sidebar.html  sidebar.scss
